Fixed extra padding in welcome page

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -1492,7 +1492,7 @@ a.tag:hover {
   }
 }
 .section.plans.welcome {
-  padding: 63px 3%;
+  padding: 63px 3% 0 3%;
   
   h3 {
     color: #5e95a1;
